# llm-plotting

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  conftest.py  deployment.yaml  e2b.Dockerfile  main.py  pyproject.toml  rowan_temp_notebook.ipynb  setup.sh  temp.ipynb
.github/workflows/: linter.yml
.streamlit/: config.toml
llm_plotting/: agent.py  parsers.py  prompt_helper.py  prompts.py  settings.py  streamlit_helper.py  tools.py  utils.py
llm_plotting/assets/: streamlit_txt.py
llm_plotting/e2b/: Makefile  e2b.Dockerfile  e2b.dockerignore  e2b.toml  requirments.txt
llm_plotting/notebooks/: POC.ipynb  rowan_temp_notebook.ipynb
tests/: test_e2e.py  test_endpoint.py  test_prompt_helper.py  test_tools.py  test_utils.py
