[tool.poetry]
name = "llm-plotting"
version = "0.1.0"
description = ""
authors = ["Rowan Mankoo <rowan.mankoo@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.4"
pandas = "^2.2.0"
openai = "^1.10.0"
python-dotenv = "^1.0.1"
plotly = "^5.18.0"
nbformat = "^5.9.2"
langchain-openai = "^0.0.5"
kaleido = "0.2.1"
langchainhub = "^0.1.14"
langchain-experimental = "^0.0.49"
e2b = "^0.13.18"
wikipedia = "^1.4.0"
pydantic-settings = "^2.1.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
python-multipart = "^0.0.7"
streamlit = "^1.31.0"
pytest = "^8.0.0"
numpy = "^1.26.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
