[tool.poetry]
name = "llm-plotting"
version = "0.1.0"
description = ""
authors = ["Rowan Mankoo <rowan.mankoo@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_plotting"}]

[tool.poetry.dependencies]
python = "3.10.0"
langchain = "^0.1.9"
pandas = "^2.2.1"
openai = "^1.12.0"
nbformat = "^5.9.2"
langchain-openai = "^0.0.7"
e2b = "^0.14.4"
pydantic-settings = "^2.2.1"
streamlit = "^1.31.1"
streamlit-extras = "^0.4.0"
streamlit-modal = "^0.1.2"


[tool.poetry.group.dev.dependencies]
plotly = "^5.19.0"
kaleido = "0.2.1"
pytest = "^8.0.1"
numpy = "^1.26.4"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
